# passmate

./: Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml  nightly.yml
src/: lib.rs  main.rs
tests/: cli.rs
