[package]
name = "passmate"
version = "0.1.0"
edition = "2021"
description = """Manage passwords with ease."""
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
anyhow = "1"
clap = { version = "4.5.17", features = ["derive"] }
serde = "1"
serde_json = "1"
xdg = "2.5.2"

[dev-dependencies]
assert_cmd = "2"
claims = "0.7"
predicates = "3"
tempfile = "3.12"
